# soban

./: .env.example  Cargo.toml  README.md
soban/: Cargo.toml
soban-macros/: Cargo.toml
soban-macros/src/: lib.rs
soban-macros/src/command/: attrs.rs  mod.rs
soban-macros/src/command/model/: args.rs  command.rs  mod.rs  ret.rs
soban/src/: lib.rs  main.rs
soban/src/commands/: mod.rs  osu.rs  ping.rs
soban/src/utils/: beatmap.rs  datetime.rs  mod.rs  osu.rs
